syntax = "proto3";

package pb;

import "google/api/annotations.proto";

option go_package = "Email/pb/session";

message CreateSessionIdRequest { string email = 1;}
message CreateSessionIdResponse { string session_id = 1;}

message VerifySessionIdRequest { string session_id = 1; }
message VerifySessionIdResponse { bool is_available = 1; }

service Session {
  rpc CreateSessionId(CreateSessionIdRequest) returns (CreateSessionIdResponse){
    option (google.api.http) = {
      post : "/session/create"
      body : "*"
    };
  }

  rpc VerifySessionId(VerifySessionIdRequest) returns (VerifySessionIdResponse) {
    option (google.api.http) = {
      post : "/session/verify"
      body : "*"
    };
  }
}