syntax="proto3";

package pb;

import "google/api/annotations.proto";

option go_package = "Email/pb/users";

message UserInformationRequest{
    string sessionID = 1;
}

message UserInformationResponse{
    string email = 1;
    string first_name = 2;
    string last_name = 3;
    string phone_number = 4;
}

message SignUpRequest{
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    string phone_number = 5;
}

message SignUpResponse{
    string user_id = 1;
    string token = 2;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    string user_id = 1;
    string token = 2;
}

message ResetPasswordRequest{
    string sessionID = 1;
    string new_password = 2;
}

message ResetPhoneNumberRequest{
    string sessionID = 1;
    string new_phone_number = 2;
}

message ResetResponse{
    bool success = 1;
}

service UserService {
    rpc UserInformations (UserInformationRequest) returns (UserInformationResponse){
        option (google.api.http) ={
            get: "/users/informations",
        };
    }

    rpc SignUp (SignUpRequest) returns (SignUpResponse){
        option (google.api.http) = {
            post: "/users/signup",
            body: "*"
        };
    }

    rpc Login (LoginRequest) returns (LoginResponse){
        option (google.api.http) = {
            post: "/login",
            body: "*"
        };
    }

    rpc ResetPassword (ResetPasswordRequest) returns (ResetResponse){
        option (google.api.http) = {
            put: "/reset-password",
            body: "*"
        };
    }

    rpc ResetPhoneNumber (ResetPhoneNumberRequest) returns (ResetResponse){
        option (google.api.http) = {
            put: "/reset-phone-number",
            body: "*"
        };
    }
}